fixed text wrapping on the tutorial

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -110,27 +110,43 @@ button:focus {
   cursor: pointer;
 }
 
-.tutorial-header:hover {
-  background-color: #4CAF50; /* Green */
-  color: white;
-}
-
 .tutorial-body{
   background-color: #ffffff;
   border: none;
   color: black;
-  padding: 60px 30px;
-  text-align: left;
+  padding: 15px 30px;
+  text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
   margin: 6px 0px;
-  cursor: pointer;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tutorial-text{
+  background-color: #ffffff;
+  border: none;
+  color: black;
+  padding: 60px 30px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 6px 0px;
+  max-width: 600px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 0 100px;
 }
 
 .tutorial-container{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .flexbox {
